--- a/test-output/testReport.html
+++ b/test-output/testReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Tuesday, May 07, 2024, 07:53 PM (CEST)</span></a>
+<a href="#"><span class="badge badge-primary">Wednesday, May 08, 2024, 05:28 PM (CEST)</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Nearest Bank Branch Test</p>
             <p class="text-sm">
-              <span>7:53:33 PM</span> / <span>00:00:03:191</span>
+              <span>5:28:27 PM</span> / <span>00:00:03:186</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Nearest Bank Branch Test</h5>
-<span class='badge badge-success'>05.07.2024 7:53:33 PM</span>
-<span class='badge badge-danger'>05.07.2024 7:53:36 PM</span>
-<span class='badge badge-default'>00:00:03:191</span>
+<span class='badge badge-success'>05.08.2024 5:28:27 PM</span>
+<span class='badge badge-danger'>05.08.2024 5:28:31 PM</span>
+<span class='badge badge-default'>00:00:03:186</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -106,9 +106,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:53:36 PM</td>
+        <td>5:28:31 PM</td>
         <td>
-          
+          The test testNearestBranch has been successfully executed.
         </td>
       </tr>
   </tbody>
@@ -130,13 +130,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Tuesday, May 07, 2024, 07:53 PM (CEST)</h3>
+<h3>Wednesday, May 08, 2024, 05:28 PM (CEST)</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Tuesday, May 07, 2024, 07:53 PM (CEST)</h3>
+<h3>Wednesday, May 08, 2024, 05:28 PM (CEST)</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -206,7 +206,7 @@
 </div></div>
 <script>
 var timeline = {
-"Nearest Bank Branch Test":3.191
+"Nearest Bank Branch Test":3.186
 };
 </script>
 <div class="row">
