--- a/test-output/testReport.html
+++ b/test-output/testReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Wednesday, May 08, 2024, 11:49 PM (CEST)</span></a>
+<a href="#"><span class="badge badge-primary">Thursday, May 09, 2024, 12:06 AM (CEST)</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">Nearest Bank Branch Test</p>
             <p class="text-sm">
-              <span>11:49:16 PM</span> / <span>00:00:03:224</span>
+              <span>12:06:11 AM</span> / <span>00:00:03:262</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Nearest Bank Branch Test</h5>
-<span class='badge badge-success'>05.08.2024 11:49:16 PM</span>
-<span class='badge badge-danger'>05.08.2024 11:49:19 PM</span>
-<span class='badge badge-default'>00:00:03:224</span>
+<span class='badge badge-success'>05.09.2024 12:06:11 AM</span>
+<span class='badge badge-danger'>05.09.2024 12:06:14 AM</span>
+<span class='badge badge-default'>00:00:03:262</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -106,38 +106,38 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:49:19 PM</td>
+        <td>12:06:14 AM</td>
         <td>
           Test Case Failed is testNearestBranch
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:49:19 PM</td>
+        <td>12:06:14 AM</td>
         <td>
           Failed due to:-- org.openqa.selenium.NoSuchElementException: For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
 Build info: version: '4.20.0', revision: '866c76ca80'
 System info: os.name: 'Mac OS X', os.arch: 'aarch64', os.version: '14.4.1', java.version: '17.0.11'
 Driver info: org.openqa.selenium.safari.SafariDriver
-Command: [ADA85C52-B300-4D8E-973A-BC7267B14359, findElement {value=//input[@placeholder='S123tart typing to search...'], using=xpath}]
+Command: [68BB5B4F-04FA-43CE-845F-A6E71969D2EE, findElement {value=//input[@placeholder='S123tart typing to search...'], using=xpath}]
 Capabilities {acceptInsecureCerts: false, browserName: Safari, browserVersion: 17.4.1, platformName: mac, safari:automaticInspection: false, safari:automaticProfiling: false, safari:diagnose: false, safari:platformBuildVersion: 23E224, safari:platformVersion: 14.4.1, safari:useSimulator: false, setWindowRect: true, strictFileInteractability: false, webkit:WebRTC: {DisableICECandidateFiltering: false, DisableInsecureMediaCapture: false}}
-Session ID: ADA85C52-B300-4D8E-973A-BC7267B14359
+Session ID: 68BB5B4F-04FA-43CE-845F-A6E71969D2EE
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:49:19 PM</td>
+        <td>12:06:14 AM</td>
         <td>
           Checkout the screenshot below: 
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>11:49:19 PM</td>
+        <td>12:06:14 AM</td>
         <td>
           
     <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='/Users/rajeevrahi/Documents/GitHub/SeleniumWebdriver/Screenshots/testNearestBranch20240508_234919.png' src="/Users/rajeevrahi/Documents/GitHub/SeleniumWebdriver/Screenshots/testNearestBranch20240508_234919.png">
+<img data-featherlight='/Users/rajeevrahi/Documents/GitHub/SeleniumWebdriver/test-output/Screenshots/testNearestBranch20240509_000614.png' src="/Users/rajeevrahi/Documents/GitHub/SeleniumWebdriver/test-output/Screenshots/testNearestBranch20240509_000614.png">
     
     </div></div>
         </td>
@@ -161,13 +161,13 @@ Session ID: ADA85C52-B300-4D8E-973A-BC7267B14359
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Wednesday, May 08, 2024, 11:49 PM (CEST)</h3>
+<h3>Thursday, May 09, 2024, 12:06 AM (CEST)</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Wednesday, May 08, 2024, 11:49 PM (CEST)</h3>
+<h3>Thursday, May 09, 2024, 12:06 AM (CEST)</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -237,7 +237,7 @@ Session ID: ADA85C52-B300-4D8E-973A-BC7267B14359
 </div></div>
 <script>
 var timeline = {
-"Nearest Bank Branch Test":3.224
+"Nearest Bank Branch Test":3.262
 };
 </script>
 <div class="row">
